syntax = "proto3";



message TransRequestMesg {
    int32 user_id = 1;
}
