syntax = "proto3";



message TransResponseMesg {
    int32 amount = 1;
}
